@@ -93,15 +93,17 @@ extern int buffer_pid;
 
 void buffer_sig(int signal, int block)
 {
-	if (!buffermem)
-		return;
+	if (!buffermem) return;
 
-	kill(buffer_pid, signal);
-	
 	if (!block)
+	{ /* Just signal, do not wait for anything. */
+		kill(buffer_pid, signal);
 		return;
+	}
 
-	if(xfermem_block(XF_WRITER, buffermem) != XF_CMD_WAKEUP) 
+	/* kill() and the waiting needs to be taken care of properly for parallel execution.
+	  Nobody reported issues so far, but I want to be sure. */
+	if(xfermem_sigblock(XF_WRITER, buffermem, buffer_pid, signal) != XF_CMD_WAKEUP) 
 		perror("Could not resync/reset buffers");
 	return;
 }
@@ -138,6 +140,7 @@ void buffer_loop(audio_output_t *ao, sigset_t *oldsigset)
 		else if(cmd == XF_CMD_WAKEUP)
 		{
 			debug("got wakeup... leaving config mode");
+			xfermem_putcmd(buffermem->fd[XF_READER], XF_CMD_WAKEUP);
 			break;
 		}
 		else
