@@ -62,6 +62,7 @@ size_t xfermem_get_usedspace (txfermem *xf);
 int xfermem_getcmd (int fd, int block);
 int xfermem_putcmd (int fd, byte cmd);
 int xfermem_block (int fd, txfermem *xf);
+int xfermem_sigblock (int fd, txfermem *xf, int pid, int signal);
 /* returns TRUE for being interrupted */
 int xfermem_write(txfermem *xf, byte *buffer, size_t bytes);
 
